# model-training

./: .gitignore  .mllint.yml  .pylintrc  GitVersion.yml  README.md  dvc.yaml  main.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
.dvc/: config
.github/workflows/: build.yml  pr-validation.yml  tag-and-release.yml  validate-release.yml
data/models/: .gitignore  c1_BoW_Sentiment_Model.pkl  c2_Classifier_Sentiment_Model
data/reports/: report.txt
dep/: requirements.txt
docs/: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE
dvc_plots/: index.html
reports/: .gitignore  coverage-report.xml  mllint_report.md  model_evaluation.txt  pylint_report.txt  tests-report.xml
res/: c1_BoW_Sentiment_Model.pkl  model.h5
src/: __init__.py  classification.py  evaluation.py  load_data.py  main.py  preprocessing.py  training.py  util.py  visualisation.py
src/pipeline/: __init__.py  evaluation.py  load_data.py  preprocessing.py  training.py  util.py
tests/: __init__py  conftest.py  test_MLdevel.py  test_MLdevelopment.py  test_MLintegration.py  test_features.py  test_integration.py  test_modeldevelopment.py  test_monitoring.py  test_placeholder.py
