[tool.poetry]
name = "model-training"
version = "0.1.35"
description = "Contains the machine learning training codebase of temla23-team08."
authors = ["remla23-team08"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.2"
joblib = "^1.1.1"
nltk = "^3.8.1"
scikit-learn = "^1.2.2"
setuptools = "^45.2.0"
pandas = "^2.0.2"

[tool.poetry.dev-dependencies]
pylint = "^2.11.2"
mllint = "^0.12.2"
dslinter = "^2.0.9"
dvc = "^3.0.0"
dvc_gdrive = "^2.19.2"
black = "^23.3.0"
bandit = "^1.7.5"
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-cov = "^3.0.0"
mypy = "^0.931"

[tool.isort]
profile = "black"

[tool.bandit]
targets = ["src/", "tests/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
